Separate route to create contacts
